welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:21: error: Unit does not take parameters
  gauche()()
          ^FlowerPot:29: error: Unit does not take parameters
  droite()()
          ^FlowerPot:32: error: Unit does not take parameters
  gauche()()
          ^FlowerPot:35: error: Unit does not take parameters
  droite()()
          ^FlowerPot:39: error: Unit does not take parameters
  droite()()
          ^